# jftpgw

./: ChangeLog  Makefile.am  Makefile.in  README  README.md  TODO  acconfig.h  active.c  bindport.c  cache.c  cache.h  cmds.c  cmds.h  config.c  config.h.in  config_header.h  configure  configure.in  ftpread.c  fw_auth_cmds.c  fw_auth_cmds.h  jftpgw.1  jftpgw.c  jftpgw.conf.sample.in  jftpgw.h  log.c  log.h  login.c  openport.c  passive.c  rel2abs.c  snprintf.c  states.c  std_cmds.c  std_cmds.h  util.c
debian/: Makefile.am  Makefile.in  README.Debian  changelog  control  copyright  dirs  jftpgw.conf  jftpgw.init  postinst  preinst  rules
doc/: Makefile.am  Makefile.in  config.html
support/: Makefile.am  Makefile.in  cachepurgy.py  getopt.c  getopt.h  getopt1.c  ipfilter.c  ipfilter.h  jftpgw-0.13.spec  jftpgw-0.13.spec.in  jftpgw.init  jftpgw.startscript  jftpgw.startscript.non-RH  jftpgw.xinetd.in
